fix: z-index 값이 중복됨

--- a/project/app/assets/stylesheets/index.css
+++ b/project/app/assets/stylesheets/index.css
@@ -118,7 +118,6 @@ body {
    ========================================================================== */
 
 #invite-view {
-  z-index: 5;
   position: fixed;
   bottom: 0;
   right: 50%;
